fixed issue with whitespace on RH side, updated ajax calls to use HTTPS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,21 +18,18 @@ input {
   margin-bottom: 10%;
 }
 
-
 .container {
   margin: 2%;
-  margin-right: 0%;
-  padding-right: 0%;
-
+  padding: 0%;
 }
 
 .small {
   color: white;
   background-color: blue;
-  padding: 10px;
+  padding: 15px;
   border-radius: 5%;
-  margin: 20%;
-  width: 12rem;
+  margin: 25%;
+  width: 15rem;
 }
 
 #searchCol {
@@ -46,9 +43,10 @@ input {
 #current-card {
 border-style: solid;
 border-color: lightgray;
-border-radius: 5%;
+border-radius: 2%;
 border-width: 1px;
 padding: 10px;
+margin: 0%;
 }
 
 #UV-index {
